# parameter-golf

./: .cursorignore  .cursorrules  .env  .env.example  .gitignore  .modalignore  .ralphrc  767  8xh100_AGENT_BRIEF.md  ACHILLES-STRATEGIC-SYNTHESIS.md  AGENTS.md  APPROACH.md  ARCHITECTURE-ANALYSIS.md  ARCHITECTURE_SUMMARY.md  ARIA_WIN_CHECKLIST.md  ARMENIA_SUBMISSION.md  ARTEMIS-CODE-REVIEW.md  ARTIFACT_V2_PLAN.md  ASK_FOR_IDEAS.md  ASK_FOR_IDEAS_v2.md  AUTO-RESEARCH-SYSTEM.md  BATCH-REVIEW-TEMPLATE.md  BEST_RESULTS.md  BPB_COMPRESSION_FORMAL_METHODS.md  BRANCH_READY_SUMMARY.md  BROAD-AI-LANDSCAPE.md  CHINA-ML-LANDSCAPE.md  CLAUDE.md  CLAUDE_HANDOFF.md  CLOUD_SETUP.md  CODEC-ARCHITECTURE-SPEC.md  COMBINATORIAL-ANALYSIS-HANDOFF.md  COMPETITION_GUIDE.md  COMPUTE_REQUEST_SUMMARY.md  CONTEXT.md  CONTEXT_FOR_HUMANS.md  CONTEXT_FOR_LLMs.md  CROSS-DOMAIN-INSIGHTS.md  Cargo.toml  DEVILS-ADVOCATE.md  (+1091 more)
autoresearch/: README.md  competition_frontier_2026-03-20.md  main.py  modal_ops_log.md  modal_search.py  next_build_plan_2026-03-20.md  paid_prefix_plan_2026-03-20.md  pgolf_autoresearch_prompt.md  pgolf_pre_review_prompt.md  pgolf_review_prompt.md  program.md  progress.md  promotion_policy.md  pyproject.toml  qlora_microttt_plan_2026-03-20.md  results.jsonl  run_experiment.py  run_pgolf_experiment.py  run_search.py  runpod_multi_pod_plan.md  sweep_overnight.py  sweep_parallel.py  sweep_sequential.py  train.py
autoresearch/core_discovery/: history.jsonl
autoresearch/core_discovery/experiments/0009/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0010/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0011/: README.md
autoresearch/core_discovery/experiments/0012/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0013/: README.md
autoresearch/core_discovery/experiments/0014/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0015/: README.md
autoresearch/core_discovery/experiments/0016/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0017/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0018/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0019/: README.md
autoresearch/core_discovery/experiments/0020/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0021/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0022/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0023/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0024/: README.md  train_gpt.py
autoresearch/core_discovery/experiments/0101/: README.md  train_gpt.py
autoresearch/core_promotion/: history.jsonl
autoresearch/core_promotion/experiments/0010/: README.md
autoresearch/core_promotion/experiments/0011/: README.md  train_gpt.py
autoresearch/core_promotion/experiments/0012/: README.md  train_gpt.py
autoresearch/core_promotion/experiments/0013/: README.md
autoresearch/core_promotion/experiments/0014/: README.md
autoresearch/core_promotion/experiments/0015/: README.md  train_gpt.py
autoresearch/eval_time_discovery/: history.jsonl  train_gpt.best.py
autoresearch/eval_time_discovery/experiments/0005/: README.md  train_gpt.py
autoresearch/eval_time_discovery/experiments/0006/: README.md  train_gpt.py
autoresearch/eval_time_discovery/experiments/0007/: README.md
autoresearch/eval_time_discovery/experiments/0008/: README.md  train_gpt.py
autoresearch/eval_time_discovery/experiments/0009/: README.md  train_gpt.py
autoresearch/eval_time_discovery/experiments/0010/: README.md  train_gpt.py
autoresearch/eval_time_discovery/experiments/0011/: README.md  train_gpt.py
autoresearch/eval_time_discovery/experiments/0012/: README.md  train_gpt.py
autoresearch/experiments/0000/: README.md
autoresearch/storage_discovery/: history.jsonl
autoresearch/storage_discovery/experiments/0009/: README.md  train_gpt.py
crates/trios-igla-race/: Cargo.toml
crates/trios-igla-race/src/: asha.rs  ema.rs  hive_automaton.rs  invariants.rs  lessons.rs  lib.rs  main.rs  neon.rs  pull_queue.rs  race.rs  rungs.rs  sampler.rs  status.rs  victory.rs
crates/trios-railway-audit/: AGENTS.md  Cargo.toml  README.md  TASK.md
crates/trios-railway-audit/src/: event.rs  lib.rs  migrations.rs
crates/trios-railway-core/: AGENTS.md  Cargo.toml  README.md  TASK.md
crates/trios-railway-core/src/: hash.rs  ids.rs  lib.rs  multiclient.rs  mutations.rs  queries.rs  transport.rs
crates/trios-railway-experience/: AGENTS.md  Cargo.toml  README.md  TASK.md
crates/trios-railway-experience/src/: lib.rs
crates/trios-railway-mcp/: Cargo.toml
crates/trios-railway-mcp/src/: main.rs  tools.rs
crates/trios-railway-smoke/: AGENTS.md  Cargo.toml  README.md  TASK.md
crates/trios-railway-smoke/examples/: smoke_in_memory.rs
crates/trios-railway-smoke/src/: lib.rs
parameter-golf-rs/: .gitignore  Cargo.toml  embed_gpu.py  fix.rs  fix_gemm.py  fix_gemm_bench.py  fix_gemm_pointers.py  fix_launch.py  fix_load_fn.py  fix_ptrs.py  implement_forward.py  libfix.rlib  reapply.py  rewrite_gpu.py  test_ptr.rs  use_f32_gemm.py
parameter-golf-rs/crates/pg-bench/: Cargo.toml
parameter-golf-rs/crates/pg-compat/: Cargo.toml
parameter-golf-rs/crates/pg-core/: Cargo.toml  scratch.rs
parameter-golf-rs/crates/pg-data/: Cargo.toml
parameter-golf-rs/crates/pg-eval/: Cargo.toml
parameter-golf-rs/crates/pg-kernels/: Cargo.toml  build.rs
parameter-golf-rs/crates/pg-model/: Cargo.toml
parameter-golf-rs/crates/pg-optim/: Cargo.toml
parameter-golf-rs/crates/pg-quant/: Cargo.toml
parameter-golf-rs/crates/pg-train/: Cargo.toml
parameter-golf-rs/deploy/: Dockerfile  build_submission.py  check_cudnn.py  modal_deploy.py  run_detached.py
parameter-golf-rs/specs/: baseline_gpu_lora_eval_smoke.toml  baseline_sp8192.toml  frontier_1855_merged_target.toml  frontier_sp8192_target.toml  hybrid_competitive_sp8192.toml
records/track_10min_16mb/2026-03-29_FusedMLP_Brotli_Memmap/: CMakeLists.txt  eval_fused.py  fused_expert_blend.cpp  pyproject.toml  train_gpt.py
(+13985 files in other folders)
