[workspace]
resolver = "2"
members = [
    "crates/trios-railway-core",
    "crates/trios-railway-audit",
    "crates/trios-railway-experience",
    "crates/trios-railway-mcp",
    "crates/trios-railway-smoke",
    "crates/trios-igla-race",
    "bin/tri-railway",
    "bin/seed-agent",
]

[workspace.package]
version      = "0.0.1"
edition      = "2021"
license      = "Apache-2.0"
authors      = ["Dmitrii Vasilev <gHashTag>"]
repository   = "https://github.com/gHashTag/trios-railway"
homepage     = "https://github.com/gHashTag/trios-railway"
rust-version = "1.75"

[workspace.dependencies]
anyhow      = "1.0"
thiserror   = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", features = ["ring", "std"] }
webpki-roots = "0.26"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum        = "0.8"
schemars    = "1.0"
rmcp        = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server"] }
uuid        = { version = "1.10", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap        = { version = "4.5", features = ["derive", "env"] }
sha2        = "0.10"
hex         = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all          = { level = "deny", priority = -1 }
pedantic     = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
