[package]
name = "trios-igla-race"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "runtime"] }
postgres-openssl = "0.5"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
rand = "0.8"

[[bin]]
name = "trios-igla-race"
path = "src/main.rs"

[[bin]]
name = "seed_agent"
path = "src/bin/seed_agent.rs"

[[bin]]
name = "seed_gardener"
path = "src/bin/seed_gardener.rs"

[[bin]]
name = "reset_queue"
path = "src/bin/reset_queue.rs"

[[bin]]
name = "debug_queue"
path = "src/bin/debug_queue.rs"
