[package]
name        = "trios-railway-core"
description = "Identity types + GraphQL transport for Railway (TRAINER-IGLA-SOT). Anchor: phi^2 + phi^-2 = 3."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
chrono    = { workspace = true }
sha2      = { workspace = true }
hex       = { workspace = true }
reqwest   = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
uuid      = { workspace = true }
