[package]
name = "pg-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
cudarc = { workspace = true, optional = true }
half = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
