[package]
name = "pg-data"
version = "0.1.0"
edition = "2024"

[dependencies]
pg-core = { path = "../pg-core" }
memmap2 = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
glob = "0.3"
