[package]
name = "pg-eval"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["pg-core/cuda", "pg-kernels/cuda", "pg-model/cuda", "dep:cudarc"]

[dependencies]
pg-core = { path = "../pg-core" }
pg-kernels = { path = "../pg-kernels" }
pg-model = { path = "../pg-model" }
pg-data = { path = "../pg-data" }
pg-quant = { path = "../pg-quant" }
thiserror = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
cudarc = { workspace = true, optional = true }

[[bin]]
name = "run"
path = "src/bin/run.rs"
