[package]
name = "pg-quant"
version = "0.1.0"
edition = "2024"

[dependencies]
pg-core = { path = "../pg-core" }
half = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }
bytemuck = { workspace = true }
byteorder = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
